# Air-Quality

./: README.md  partitions.csv
docs/: alert-ambient-roadmap.md  boot-sequence.puml  freertos-concurrency.puml  http-api-endpoints.puml  runtime-loop.puml  system-architecture.puml  ui-navigation.puml  wifi-state-machine.puml  wifi-test-credentials.puml
main/: B_hybrid_160x128.rgb565  CMakeLists.txt  captive_dns.c  main.c
main/app/: app_core.c  app_core.h  app_state_machine.c  app_state_machine.h  dashboard_state.c  dashboard_state.h
main/drivers/: display_hal.c  display_hal.h  encoder_input.c  encoder_input.h
main/services/: alarm_service.c  alarm_service.h  captive_dns.h  connectivity_service.c  connectivity_service.h  memory_photo_service.c  memory_photo_service.h
main/ui/: ui_flow.c  ui_flow.h  ui_renderer.c  ui_renderer.h
main/web/: app.css  app.js  index.html
